<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar_create_flashcards"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        >
        <CheckBox
            android:id="@+id/checkBox_select_all"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            />
        <TextView
            android:id="@+id/text_create_list_screen"
            android:layout_marginStart="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/windowBackground"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="30dp"
            android:text="@string/select_all"/>
    </android.support.v7.widget.Toolbar>
    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar_create_flashcards_search"
        android:layout_alignParentBottom="true"
        android:layout_height="48dp"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimaryTransparency"
        >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
  <Button
      android:id="@+id/button_create_reset"
      android:text="@string/reset"
      android:layout_marginTop="5dp"
      android:layout_marginBottom="5dp"
      android:background="@color/colorPrimary"
      android:textColor="@color/windowBackground"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_create_list"
            android:text="@string/done"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/windowBackground"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/button_create_move_top"
            android:text="@string/move_to_top"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/windowBackground"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    </android.support.v7.widget.Toolbar>

<FrameLayout
    android:layout_below="@+id/tool_bar"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"></FrameLayout>
</RelativeLayout>