<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/windowBackground"
            android:text="@string/login_title"/>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="fill_parent"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/login_image"
        android:layout_height="fill_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/first_name"
        android:id="@+id/text_first_name"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp" />

    <EditText
        android:layout_width="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_height="40dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:id="@+id/editText_first_name"
        android:textColor="@color/textColorPrimary"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:layout_below="@+id/text_first_name"
        android:layout_alignLeft="@+id/text_first_name"
        android:layout_alignStart="@+id/text_first_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
         />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/last_name"
        android:id="@+id/text_last_name"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/editText_first_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_last_name"
        android:textColor="@color/textColorPrimary"
        android:layout_below="@+id/text_last_name"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:layout_alignLeft="@+id/editText_first_name"
        android:layout_alignStart="@+id/editText_first_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email"
        android:id="@+id/text_email"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/editText_last_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="eg: abc@xyz.com"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:textColor="@color/textColorPrimary"
        android:id="@+id/editText_email"
        android:layout_below="@+id/text_email"
        android:layout_alignLeft="@+id/text_email"
        android:layout_alignStart="@+id/text_email"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/username"
        android:id="@+id/text_username"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/editText_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:inputType="textAutoComplete"
        android:id="@+id/editText_username"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:textColor="@color/textColorPrimary"
        android:layout_below="@+id/text_username"
        android:layout_alignLeft="@+id/text_username"
        android:layout_alignStart="@+id/text_username"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

         <Button
            android:layout_below="@+id/editText_username"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:background="@color/colorPrimary"
            android:textColor="@color/windowBackground"
            android:id="@+id/next_login_button"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />

    </RelativeLayout>

</RelativeLayout>