<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:background="@color/windowBackground"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_my_list" />
    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fab_my_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        fab:fab_addButtonColorNormal="@color/windowBackground"
        fab:fab_addButtonColorPressed="@color/windowBackground"
        fab:fab_addButtonPlusIconColor="@color/colorPrimaryDark"
        fab:fab_labelStyle="@style/menu_labels_style"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_create_list_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_addButtonColorNormal="@color/windowBackground"
            fab:fab_addButtonColorPressed="@color/windowBackground"
            fab:fab_colorNormal="@color/windowBackground"
            fab:fab_title="@string/create_symbol"
            />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_create_list_definition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/windowBackground"
            fab:fab_title="@string/create_definition"
            fab:fab_addButtonColorNormal="@color/windowBackground"
            fab:fab_addButtonColorPressed="@color/windowBackground"
            />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_make_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/windowBackground"
            fab:fab_title="@string/make_flashcards"
            fab:fab_addButtonColorNormal="@color/windowBackground"
            fab:fab_addButtonColorPressed="@color/windowBackground"
            />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>
</RelativeLayout>