<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/windowBackground"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="10dp"
            android:text="@string/back_title"/>
    </android.support.v7.widget.Toolbar>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_below="@+id/tool_bar"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/login_image"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/enter_password"
        android:id="@+id/text_enter_password"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_enter_password"
        android:textColor="@color/textColorPrimary"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/text_enter_password"
        android:layout_alignLeft="@+id/text_enter_password"
        android:layout_alignStart="@+id/text_enter_password"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/confirm_password"
        android:id="@+id/text_confirm_password"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/editText_enter_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_confirm_password"
       android:textColor="@color/textColorPrimary"
        android:layout_below="@+id/text_confirm_password"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="75dp"
        android:layout_alignLeft="@+id/editText_enter_password"
        android:layout_alignStart="@+id/editText_enter_password"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


        <Button
            android:layout_marginTop="20dp"
            android:layout_below="@+id/editText_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/submit_login"
            android:id="@+id/submit_login_button"
            android:textColor="@color/windowBackground"
            android:background="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="87dp" />


    </RelativeLayout>

</RelativeLayout>